--- a/src/components/MonthPage/MonthPage.css
+++ b/src/components/MonthPage/MonthPage.css
@@ -8,8 +8,12 @@
 }
 
 .react-calendar {
-    width: 30%;
+    width: 40%;
     margin: auto;
+}
+
+.react-calendar button:disabled {
+    background-color: white;
 }
 
 @media (max-width: 320px) {
