--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,42 +1,45 @@
-.nav {
-  /* flex box layout */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  margin: 0 0 30px;
-  background-color: #00acb0;
-  overflow: hidden;
-}
-
-.nav a {
+header a {
   text-decoration: none;
 }
 
 .nav-title {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 700;
   color: #f2f2f2;
-  padding-left: 10px;
   margin: 0;
+  margin-right: 20px;
+  text-decoration: none;
 }
 
 .navLink {
   display: inline-block;
   color: #f2f2f2;
-  background-color: #00acb0;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
   font-size: 15px;
-
-  /* these last two make the logout button in
-  the nav bar look like another link */
-  border: none;
-  cursor: pointer;
-  outline: 0;
+  display: flex;
+  align-items: center;
 }
 
-.navLink:hover {
-  background-color: #008183;
+.drawerNavLink {
+  display: inline-block;
+  color: black;
+  text-align: center;
+  padding: 24px 10px;
+  text-decoration: none;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+}
+
+header a p, header div p, .drawerNavLink p {
+  margin: 0;
+  padding-left: 5px;
+}
+
+@media (max-width: 330px) {
+  .nav-title {
+    font-size: 27px;
+  }
 }
