--- a/src/components/MonthPage/MonthPage.css
+++ b/src/components/MonthPage/MonthPage.css
@@ -8,8 +8,9 @@
 }
 
 .react-calendar {
-    width: 40%;
-    margin: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 475px;
 }
 
 .react-calendar button:disabled {
