--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -1,7 +1,3 @@
-table {
-    text-align: center;
-}
-
 .income-amount {
     color: green;
 }
@@ -10,6 +6,33 @@ table {
     color: red;
 }
 
-.subcategory-row {
-    cursor: pointer;
+#home-category-tables-wrapper {
+    display: flex;
+    width: 91%;
+    margin: auto;
+    justify-content: space-between;
+}
+
+#home-categories-table {
+    width: 55%;
+}
+
+#home-subcategories-table {
+    width: 43%;
+}
+
+@media (max-width: 820px) {
+    #home-category-tables-wrapper {
+        justify-content: space-around;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    #home-categories-table {
+        width: 100%
+    }
+
+    #home-subcategories-table {
+        width: 100%
+    }
 }
