--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -15,6 +15,14 @@ header a {
   text-decoration: none;
 }
 
+.drawer-nav-title {
+  font-size: 28px;
+  font-weight: 700;
+  color: black;
+  margin: auto;
+  text-decoration: none;
+}
+
 @media (max-width: 330px) {
   .nav-title {
     font-size: 27px;
