--- a/src/components/AddPage/AddPage.css
+++ b/src/components/AddPage/AddPage.css
@@ -1,8 +1,7 @@
 #forms-wrapper {
     display: flex;
     width: 100%;
-    justify-content: space-around;
-    align-content: flex-end;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 } 
