--- a/src/components/FeedbackPage/FeedbackPage.css
+++ b/src/components/FeedbackPage/FeedbackPage.css
@@ -1,3 +1,24 @@
 #footer-link-wrapper {
   margin-top: 10px;
 }
+
+.tutorial-section {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-size: 1.5rem;
+}
+
+.tutorial-section p {
+  margin: 0;
+}
+
+@media (max-width: 820px) {
+  .tutorial-section {
+    flex-direction: column;
+  }
+
+  .reverse {
+    flex-direction: column-reverse;
+  }
+}
